--- a/pages/bag.html
+++ b/pages/bag.html
@@ -12,7 +12,7 @@
             <a href="#"><img class="myntra_home" src="../images/myntra_logo.webp" alt="Myntra Home"></a>
         </div>
         <nav class="nav_bar">
-            <a href="#">Men</a>
+            <a href="index.html">Men</a>
             <a href="#">Women</a>
             <a href="#">Kids</a>
             <a href="#">Home & Living</a>
@@ -55,7 +55,7 @@
             <div class="footer_column">
                 <h3>ONLINE SHOPPING</h3>
 
-                <a href="#">Men</a>
+                <a href="index.html">Men</a>
                 <a href="#">Women</a>
                 <a href="#">Kids</a>
                 <a href="#">Home & Living</a>
